--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by https://www.gitignore.io/api/django
-
 ### Django ###
 config.json
 *.log
@@ -9,3 +7,19 @@ __pycache__/
 local_settings.py
 db.sqlite3
 media
+
+### Ember ###
+/dist
+/tmp
+
+# dependencies
+/node_modules
+/bower_components
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
