Created application adapter, book model, updated books route, fixed CORs issue

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ media
 /libpeerconnection.log
 npm-debug.log
 testem.log
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
